Add two player functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>TiTaTo</title>
     <meta charset="utf-8">
     <meta name="viewport"  content="width=device-width, initial-scale=1">
+    <link rel="icon" href="assets/images/tab-icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
   </head>
@@ -11,7 +12,7 @@
     <header>
       <h1 class="title">Tick Tack Tow</h1>
     </header>
-<!-- 
+
     <section class="container-full leaderboard">
       <button class="start btn" tabindex="0" role="button">Start</button>
       <div class="leaderboard-form" tabindex="0">
@@ -57,25 +58,25 @@
 
     <section class="container-full options">
       <div class="game-over">
-        <h1 class="result">Game Over! Player 1 wins</h1>
+        <h1 class="result">Game Over! Change me sometime</h1>
         <button class="btn replay">Play each other again?</button>
       </div>
     </section>
-     -->
+    
     <section class="container board">
-      <div class="spot empty" data-index="0"></div>
-      <div class="spot empty" data-index="1"></div>
-      <div class="spot empty" data-index="2"></div>
-      <div class="spot empty" data-index="3"></div>
-      <div class="spot empty" data-index="4"></div>
-      <div class="spot empty" data-index="5"></div>
-      <div class="spot empty" data-index="6"></div>
-      <div class="spot empty" data-index="7"></div>
-      <div class="spot empty" data-index="8"></div>
+      <div class="spot" data-index="0"></div>
+      <div class="spot" data-index="1"></div>
+      <div class="spot" data-index="2"></div>
+      <div class="spot" data-index="3"></div>
+      <div class="spot" data-index="4"></div>
+      <div class="spot" data-index="5"></div>
+      <div class="spot" data-index="6"></div>
+      <div class="spot" data-index="7"></div>
+      <div class="spot" data-index="8"></div>
     </section>
 
     <section class=" container status">
-      <h1 class="status-message">Player 1 turn</h1>
+      <h1 class="status-message"></h1>
     </section>
 
 
