Add link to GitHub

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <header>
       <h1 class="title">Tick Tack Tow</h1>
+      <a class="github" href="https://github.com/Lucas-Bide/odin-tictactoe" target="_blank"><i class="fab fa-github"></i></a>
     </header>
 
     <section class="container-full leaderboard">
@@ -50,8 +51,8 @@
           </div>
         </div>
             <div class="restart">
-              <h1 class="reset score-only">Reset Score</h1>
-              <h1 class="reset name-score">Reset All</h1>
+              <h1 class="reset score-only"><a href="#">Reset Score</a></h1>
+              <h1 class="reset name-score"><a href="#">Reset All</a></h1>
             </div>
       </div>
     </section>
